--- a/build.gradle
+++ b/build.gradle
@@ -7,9 +7,9 @@ repositories {
     mavenCentral()
 }
 
-def allureVersion = '2.15.0',
-    selenideVersion = '5.24.4',
-    junitVersion = '5.8.1'
+def allureVersion = "2.14.0",
+    selenideVersion = "5.24.0",
+    junitVersion = "5.8.1"
 
 allure {
     version = allureVersion
@@ -23,29 +23,28 @@ allure {
 
 dependencies {
     testImplementation(
-            "org.aspectj:aspectjweaver:1.9.7",
+            "org.aspectj:aspectjweaver:1.9.6",
             "com.codeborne:selenide:$selenideVersion",
             "io.qameta.allure:allure-selenide:$allureVersion",
             "com.github.javafaker:javafaker:1.0.2",
             "org.aeonbits.owner:owner:1.0.12",
             "org.junit.jupiter:junit-jupiter-api:$junitVersion")
     testRuntimeOnly(
-            "org.slf4j:slf4j-simple:1.7.32",
+            "org.slf4j:slf4j-simple:1.7.29",
             "org.junit.jupiter:junit-jupiter-engine:$junitVersion")
 }
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
-    sourceCompatibility = 11
-    targetCompatibility = 11
 }
 
 tasks.withType(Test) {
-    systemProperties(System.getProperties())
     useJUnitPlatform()
+    systemProperties(System.getProperties())
 
     testLogging {
         lifecycle {
+//            events "started", "failed"
             events "started", "skipped", "failed", "standard_error", "standard_out"
             exceptionFormat "short"
         }
