--- a/build.gradle
+++ b/build.gradle
@@ -22,16 +22,14 @@ allure {
 }
 
 dependencies {
-    testImplementation(
-            "org.aspectj:aspectjweaver:1.9.6",
-            "com.codeborne:selenide:$selenideVersion",
+    testImplementation( "org.aspectj:aspectjweaver:1.9.6",
+            "com.codeborne:selenide:5.24.0",
             "io.qameta.allure:allure-selenide:$allureVersion",
-            "com.github.javafaker:javafaker:1.0.2",
+            "org.junit.jupiter:junit-jupiter:5.7.1",
             "org.aeonbits.owner:owner:1.0.12",
-            "org.junit.jupiter:junit-jupiter-api:$junitVersion")
-    testRuntimeOnly(
-            "org.slf4j:slf4j-simple:1.7.29",
-            "org.junit.jupiter:junit-jupiter-engine:$junitVersion")
+            "com.github.javafaker:javafaker:1.0.2")
+    testRuntimeOnly(    "org.slf4j:slf4j-simple:1.7.29",
+            "org.junit.jupiter:junit-jupiter-engine:5.7.1")
 }
 
 tasks.withType(JavaCompile) {
@@ -39,8 +37,9 @@ tasks.withType(JavaCompile) {
 }
 
 tasks.withType(Test) {
-    useJUnitPlatform()
+
     systemProperties(System.getProperties())
+    useJUnitPlatform()
 
     testLogging {
         lifecycle {
@@ -49,4 +48,8 @@ tasks.withType(Test) {
             exceptionFormat "short"
         }
     }
+}
+
+test {
+    useJUnitPlatform()
 }
